--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,6 @@
     "minimum-stability": "dev",
     "support": {
         "issues": "https://www.drupal.org/project/issues/custom_short_links",
-        "source": "http://cgit.drupalcode.org/custom_short_links",
-    },
+        "source": "http://cgit.drupalcode.org/custom_short_links"
+    }
 }
